<resources>
    <!-- Follow naming convention
         <viewType>_<filename_without_prefix>_<desired_name>
         e.g.
         filename: activity_main.xml
         viewType: Button
         desiredName: take_assessment

         name="button_main_take_assessment"
    -->

    <!-- general -->
    <string name="children_profile">Children Profile</string>
    <string name="bornlearning_banner_dec">BornLearning banner</string>
    <string name="submit">Submit</string>

    <!-- main -->
    <string name="button_main_take_assessment">Take Assessment</string>
    <string name="button_main_view_history">View History</string>
    <string name="spinner_main_center_selection">Select Center</string>

    <!-- development -->
    <string name="textview_development_center_name_value">Center Name</string>
    <string name="textview_development_center_title">Center:</string>
    <string name="textview_development_sevika_name_value">Sevika Name</string>
    <string name="textview_development_sevika_name_title">Sevika:</string>
    <string name="textview_development_phone_number_title">Phone Number:</string>
    <string name="textview_development_phone_number_value">Phone Number</string>
    <string name="button_development_school_readiness">School Readiness</string>
    <string name="button_development_infrastructure_development">Infrastructure Development</string>
    <string name="button_development_community_readiness">Community Readiness</string>

    <!-- School Readiness-->
    <string name="button_social_and_emotional">Social and Emotional</string>
    <string name="button_language_and_communication">Language and Communication</string>
    <string name="button_cognitive">Cognitive</string>
    <string name="button_movement_and_physical_development">Movement and Physical Development</string>
    <string name="button_physical_wellbeing">Physical Wellbeing</string>

    <!-- Children Profile -->
    <string name="item_children_profile_add_child_profile">Add Child Profile</string>

    <!-- Add Child Profile -->
    <string name="add_child_id">Child Id:</string>
    <string name="add_child_first_name">First Name:</string>
    <string name="add_child_last_name">Last Name:</string>
    <string name="add_child_dob">Date of Birth:</string>
    <string name="add_child_gender">Gender:</string>
    <string name="radio_button_gender_male">M</string>
    <string name="radio_button_gender_female">F</string>
    <string name="add_child_guardian_name">Guardian Name:</string>
    <string name="add_child_guardian_phone">Guardian Phone:</string>


    <!-- Login -->
    <string name="button_login">Login</string>
    <string name="facilitator_access">Facilitator\nAccess</string>
    <string name="facilitator_id_title">Facilitator ID</string>
    <string name="enter_facilitator_id">Enter Facilitator ID</string>

    <!-- Question implementation -->
    <string name="textview_indicator_1">1. Disagree</string>
    <string name="textview_indicator_2">2. Neutral</string>
    <string name="textview_indicator_3">3. Agree</string>
    <string name="edittext_indicator_hint">Value</string>

    <string name="textview_questions_center_title">Center:</string>
    <string name="textview_questions_child_name_title">Child Name:</string>

</resources>
