<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bornLearningMain"
    tools:context="com.grp15.cmpe272.unitedwayapp.bornlearning.development.schoolreadiness.SchoolReadinessFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/born_learning_banner"/>

    <Button
        android:id="@+id/button_social_and_emotional"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        android:layout_marginTop="@dimen/top_element_margin"
        android:text="@string/button_social_and_emotional" />

    <Button
        android:id="@+id/button_language_and_communication"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:text="@string/button_language_and_communication" />

    <Button
        android:id="@+id/button_cognitive"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:text="@string/button_cognitive" />

    <Button
        android:id="@+id/button_movement_and_physical_development"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:text="@string/button_movement_and_physical_development" />

    <Button
        android:id="@+id/button_physical_wellbeing"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:text="@string/button_physical_wellbeing" />

   </LinearLayout>
