<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <RadioButton
        android:id="@+id/radiobutton_indicator_1"
        style="@style/BornLearningRadioButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_indicator_1"/>

    <RadioButton
        android:id="@+id/radiobutton_indicator_2"
        style="@style/BornLearningRadioButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_indicator_2"/>

    <RadioButton
        android:id="@+id/radiobutton_indicator_3"
        style="@style/BornLearningRadioButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_indicator_3"/>

</RadioGroup>