<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bornLearningMain"
    tools:context="com.grp15.cmpe272.unitedwayapp.bornlearning.development.FirstFragment">

    <TextView
        android:id="@+id/text_main_facilitator_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/top_element_margin"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:text="TextView" />

    <Spinner
        android:id="@+id/spinner_main_center_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:contentDescription="@string/spinner_main_center_selection"/>

    <Button
        android:id="@+id/button_main_take_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:text="@string/button_main_take_assessment" />

    <Button
        android:id="@+id/button_main_view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:text="@string/button_main_view_history" />

</LinearLayout>
