<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bornLearningMain"
    tools:context="com.grp15.cmpe272.unitedwayapp.bornlearning.profile.child.AddChildProfileFragment">

    <ImageView
        android:id="@+id/imageview_add_child_born_learning_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/born_learning_banner"/>

    <LinearLayout
        android:id="@+id/linearlayout_add_child_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/between_buttons_margin">

        <TextView
            android:id="@+id/textview_add_child_id"
            style="@style/BornLearningHeaderSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_weight="2"
            android:text="@string/add_child_id"/>

        <EditText
            android:id="@+id/edit_text_add_child_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_add_child_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/between_buttons_margin">

        <TextView
            android:id="@+id/textview_add_child_first_name"
            style="@style/BornLearningHeaderSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_weight="2"
            android:text="@string/add_child_first_name"/>

        <EditText
            android:id="@+id/edit_text_add_child_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_add_child_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/between_buttons_margin">

        <TextView
            android:id="@+id/textview_add_child_last_name"
            style="@style/BornLearningHeaderSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_weight="2"
            android:text="@string/add_child_last_name"/>

        <EditText
            android:id="@+id/edit_text_add_child_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_add_child_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/between_buttons_margin">

        <TextView
            android:id="@+id/textview_add_child_dob"
            style="@style/BornLearningHeaderSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_weight="2"
            android:text="@string/add_child_dob"/>

        <EditText
            android:id="@+id/edit_text_add_child_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearlayout_add_chiod_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/between_buttons_margin">

        <TextView
            android:id="@+id/textview_add_child_gender"
            style="@style/BornLearningHeaderSmallStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:gravity="left|center"
            android:layout_weight="2"
            android:text="@string/add_child_gender"/>

        <include layout="@layout/radiogroup_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
