<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bornLearningMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.grp15.cmpe272.unitedwayapp.bornlearning.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/born_learning_banner"/>

    <LinearLayout
        android:id="@+id/linearlayout_development_center_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:layout_marginTop="@dimen/top_element_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_development_center_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/textview_development_center_title" />

        <TextView
            android:id="@+id/textview_development_center_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/textview_development_center_name_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_development_sevika_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:layout_marginTop="@dimen/between_buttons_margin"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearlayout_development_center_info">

        <TextView
            android:id="@+id/textview_development_sevika_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:gravity="start"
            android:text="Sevika Name:" />

        <TextView
            android:id="@+id/textview_development_sevika_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/textview_development_sevika_name_value" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_development_sevika_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_button_edge_margin"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/linearlayout_development_center_info">

        <TextView
            android:id="@+id/textview_development_sevika_contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:gravity="start"
            android:text="Phone Number:" />

        <TextView
            android:id="@+id/textview_development_sevika_contact_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Phone Number" />

    </LinearLayout>

    <Button
        android:id="@+id/button_school_readiness"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_development_sevika_contact"
        android:text="@string/button_development_school_readiness" />

    <Button
        android:id="@+id/button_infrastructure_development"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        app:layout_constraintTop_toBottomOf="@+id/button_school_readiness"
        android:text="Infrastructure Development" />

    <Button
        android:id="@+id/button_community_readiness"
        style="@style/BornLearningButtonStyle"
        android:layout_margin="@dimen/between_buttons_margin"
        app:layout_constraintTop_toBottomOf="@+id/button_infrastructure_development"
        android:text="Community Readiness" />


</android.support.constraint.ConstraintLayout>
